--- a/forms.html
+++ b/forms.html
@@ -465,3 +465,13 @@
     <br />
   </body>
 </html>
+
+const [title,setTitle]=useState(""); const
+[firstName,setFirstName]=useState(""); const
+[middleName,setMiddleName]=useState(""); const
+[lastName,setLastName]=useState(""); const
+[facilityName,setFacilityName]=useState(""); const
+[healthCare,setHealthCare]=useState(""); const
+[speciality,setSpeciality]=useState(""); const
+[address,setAddress]=useState(""); const [city,setCity]=useState(""); const
+[spainState,setspainState]=useState(""); const [state,setState]=useState("");
